# cookie-cutter-kodexa-transformer-model

./: .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  README.md  makefile  model.yml  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: __init__.py  model.py  transformer.py
