[tool]
[tool.poetry]
name = "cookiecutter-kodexa-infer-model"
version = "1.0.0"
description = "Cookiecutter template for a Kodexa Inference Model"
license = "Apache-2.0"
authors = ["Philip Dodds <philip@kodexa.com>"]
readme = "README.md"
repository = "https://github.com/kodexa-labs/cookiecutter-kodexa-infer-model"
keywords = ['cookiecutter', 'template', 'package']

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
cookiecutter = "2.6.0"

[tool.poetry.extras]
dev = [
  "pytest",
  "pyyaml",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
